--- a/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
+++ b/MovieDiary/MovieDiary/Base.lproj/Main.storyboard
@@ -270,6 +270,9 @@
                                                 <color key="value" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="searchFieldDidChange:" destination="BYZ-38-t0r" eventType="editingChanged" id="b9V-c6-Ctz"/>
+                                        </connections>
                                     </textField>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="magnifyingglass" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="dcp-kb-aMH">
                                         <rect key="frame" x="0.0" y="6" width="32" height="30"/>
